Rutas arregladas y vista de lanzamientos