@@ -1,5 +1,6 @@
 package com.musicplayer.config;
 
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Configuration;
@@ -14,7 +15,7 @@ public class StaticResourceConfig implements WebMvcConfigurer {
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        String absolutePath = Paths.get(uploadDir).toAbsolutePath().toString();
+        String absolutePath = Path.of(uploadDir).toAbsolutePath().toString();
         registry.addResourceHandler("/uploads/**").addResourceLocations("file:" + absolutePath + "/");
     }
 }
